fix header contrast

--- a/fruitStand/css/styles.css
+++ b/fruitStand/css/styles.css
@@ -534,7 +534,7 @@ main {
   max-width: 71.25rem;
 }
 main h1 {
-  color: #fa8d45;
+  color: #111;
   font-weight: 700;
   margin: 1rem 2%;
 }
