--- a/fruitStand/scss/_small.scss
+++ b/fruitStand/scss/_small.scss
@@ -89,7 +89,7 @@ main {
     max-width: 71.25rem;
     //background-color: #eee;
     h1 {
-        color: $primaryColor;
+        color: #111;
         font-weight: $heavyWeight;
         margin: 1rem 2%;
     }
